<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASEN</string>
    <string name="title_activity_main">ASEN</string>
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_poll_enabled">Notifs ON</string>
    <string name="menu_poll_disabled">Notifs OFF</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filter">Filter</string>
    
    <string name="title_activity_settings_activity">Settings</string>
    <string name="settings_general_section">General</string>
    <string name="settings_url_label">URL</string>
    <string name="settings_poller_section">Poller</string>
    <string name="settings_filter_pattern">Filter pattern</string>
    <string name="settings_poll_time">Polling time</string>
    <string name="settings_poll_interval">Polling interval</string>
	<string name="settings_save_button">Save</string>
	<string name="settings_error">Error while saving settings</string>
	<string name="settings_error_ok">Ok</string>
	
    <!-- Default values -->
    <string name="default_settings_url">http://search.twitter.com/search.json?q=tcstrafica1&amp;rpp=20</string>
    <string name="default_settings_poll_time">600000</string>
    <string name="default_settings_filter_pattern">Lausanne-Crisser|Villars-Saint-Croix</string>
    <string name="default_settings_interval_pattern">11:00-12:00|13:00-14:00</string>
</resources>