<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivityActivity" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/settings_general_section"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/editTextUrl"
        android:layout_marginTop="16dp"
        android:text="@string/settings_filter_pattern" />

    <EditText
        android:id="@+id/editTextFilterPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUrl"
        android:layout_alignRight="@+id/editTextUrl"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/default_settings_filter_pattern"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextPollTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextIntervalPattern"
        android:layout_alignLeft="@+id/editTextFilterPattern"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_settings_poll_time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView6"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/default_settings_url"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextIntervalPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPollTime"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView6"
        android:ems="10"
        android:inputType="text"
        android:text="@string/default_settings_interval_pattern"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/settings_url_label" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="19dp"
        android:text="@string/settings_poller_section"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="34dp"
        android:layout_marginRight="31dp"
        android:text="@string/settings_save_button" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSave"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginBottom="43dp"
        android:text="@string/settings_poll_interval" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginBottom="16dp"
        android:text="@string/settings_poll_time" />

</RelativeLayout>